Improved nesting of `<div>`s to solve the overlapping footer issue in the list view on the results page. Changed padding and background color for the links in the list view.

--- a/web-ui/src/main/resources/catalog/style/gn_search.less
+++ b/web-ui/src/main/resources/catalog/style/gn_search.less
@@ -706,14 +706,13 @@ button.active [role=tooltip] {
   border: none;
 }
 .gn-related-list {
-  padding: 0;
+  padding: 2px 0;
   list-style: none;
   > li {
-    padding-left: 15px;
     &:hover {
       text-decoration: none;
       color: #262626;
-      background-color: #f5f5f5;
+      background-color: transparent;
     }
     &.gn-related-type {
       padding-left: 15px;
@@ -726,9 +725,6 @@ button.active [role=tooltip] {
       &:first-letter {
         text-transform: uppercase;
       }
-    }
-    &:not(.gn-related-type) {
-      font-size: 12px;
     }
   }
 }
